Index redirect_init
Automatic redirect to a site I use as captive for local my Fritz!Box

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<body>
+	<<body onload=window.location='auroraborealis_Fritz!Box Vorschaltseite.html'>>
 		<h1>Erster Erfolg</h1>
 		<p>Leite nun weiter..></p>
 	</body>
