--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<<body onload=window.location='auroraborealis_Fritz!Box Vorschaltseite.html'>>
-		<h1>Erster Erfolg</h1>
+	<head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=auroraborealis_Fritz!Box Vorschaltseite.html">
+        <!--<script type="text/javascript">
+            window.location.href = "http://example.com"
+        </script>-->
+        <title>Weiterleitung</title>
+    </head>
+	<<body>
+		<p style="color: #A4A4A4">Erster Erfolg</p>
 		<p>Leite nun weiter..></p>
 	</body>
 </html>
