--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Weiterleitung</title>
     </head>
 	<<body>
-		<p style="color: #A4A4A4">Erster Erfolg</p>
+		<p style="color: #A4A4A4;">Erster Erfolg</p>
 		<p>Leite nun weiter..></p>
 	</body>
 </html>
