--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="UTF-8">
         <!--<meta http-equiv="refresh" content="0; url=auroraborealis_Fritz!Box Vorschaltseite.html">
-        <!--<script type="text/javascript">
+        <script type="text/javascript">
             window.location.href = "http://example.com"
         </script>-->
         <title>Weiterleitung</title>
