--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Weiterleitung</title>
     </head>
 	<<body>
-		0<p style="color: #A4A4A4;">Erster Erfolg</p>
+		<p style="color: #A4A4A4;">Erster Erfolg</p>
 		<p>Leite nun weiter...</p>
 		<p>Falls sie nicht weitergeleitet werden, klicken sie <a href="auroraborealis_Fritz!Box Vorschaltseite.html">hier</href>.</p>
 	</body>
