--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </script>-->
         <title>Weiterleitung</title>
     </head>
-	<<body>
+	<body>
 		<p style="color: #A4A4A4;">Erster Erfolg</p>
 		<p>Leite nun weiter...</p>
 		<p>Falls sie nicht weitergeleitet werden, klicken sie <a href="auroraborealis_Fritz!Box Vorschaltseite.html">hier</a>.</p>
