--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
         <meta charset="UTF-8">
-        <!--<meta http-equiv="refresh" content="0; url=auroraborealis_Fritz!Box Vorschaltseite.html">
+        <meta http-equiv="refresh" content="0; url=auroraborealis_Fritz!Box Vorschaltseite.html">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
-        </script>-->
+            window.location.href = "auroraborealis_Fritz!Box Vorschaltseite.html"
+        </script>
         <title>Weiterleitung</title>
     </head>
 	<body>
