Simplifying auroraborealis_Fritz!Box Vorschaltseite.html

--- a/auroraborealis_Fritz!Box Vorschaltseite.html
+++ b/auroraborealis_Fritz!Box Vorschaltseite.html
@@ -11,7 +11,7 @@
     				Wird <strong style="background-color: #b43239; padding: 0 4px; color: #22f3ee;">diese Seite</strong> erfolgreich geladen, so besteht eine erfolgreiche Internetverbindung &uuml;ber den WLAN-Gastzugang dieser Familie.<br />
             		<!-- 	Bearbeitungslink auf den Host des Bildes: https://ibb.co/msoyR8	-->
     	        	<a href="https://www.google.de" target="_blank" rel="noopener" style="color:#aacccc">
-        	    		<br/>Viel Spa&szlig; ohne Daten-, Zeitlimit <img src="https://www.w3schools.com/tags/smiley.gif" alt="smile" />
+        	    		<br/>Viel Spa&szlig;!<img src="https://www.w3schools.com/tags/smiley.gif" alt="smile" />
                		</a>
             	</p>
 			</div>
